# avito-sep24-solution

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  schema.sql
avito_sep24/: __init__.py  database.py  env.py  errors.py  misc.py  utils.py
avito_sep24/models/: __init__.py  bid.py  bid_review.py  employee.py  organization.py  tender.py
avito_sep24/repositories/: bid.py  employee.py  organization.py  tender.py
avito_sep24/routes/: __init__.py  ping.py
avito_sep24/routes/bids/: create.py  read.py  update.py
avito_sep24/routes/tenders/: create.py  read.py  update.py
avito_sep24/schemas/: __init__.py  bid.py  pagination.py  tender.py
