[tool.poetry]
name = "avito_sep24"
version = "0.1.0"
description = ""
authors = ["Albert Zuev <me@nalinor.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = 'py312'
line-length = 88
force-exclude = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "W",  # pycodestyle
    "E",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # PEP8 naming
    "UP",  # pyupgrade
    "ANN",  # flake8-annotations
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "LOG",  # flake8-logging
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PL",  # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN101",  # missing-type-self
    "COM812",  # missing-trailing-comma
    "PLR0913", # too-many-arguments
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.mypy]
python_version = "3.12"